*****************************************************************************************************
digiKam 5.9.0 - Release date: 2018-xx-xx

NEW FEATURES:

Image Editor : New clone tool to replace old CImg in-painting tool.

BUGFIXES FROM BUGZILLA:

001 ==> 
